@@ -9,6 +9,10 @@
 	  More tests for long long.
 	* support/regression/tests/gcc-torture-execute-*.c:
 	  Made TODO comments more specific wrt. to what sdcc functionality is required for enabling the test.
+	* device/lib/_rrslonglong_rrx_s.c,
+	  device/lib/_rrulonglong_rrx_s.c,
+	  device/lib/_rlulonglong_rrx_s.c:
+	  Fixes for long long shift.
 
 2012-03-29 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
